# linked-data-repository-shared

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
clients/: __init__.py
clients/messenger/: base.py  pubsub.py
gcp_tests/: __init__.py  pubsub.py
ldrshared/: constants.py
ldrshared/clients/: README.md  __init__.py
ldrshared/clients/messenger/: README.md  base.py  pubsub.py
ldrshared/validation/: README.MD  __init__.py
ldrshared/validation/ldrschemas/: __init__.py  jsonschemawrapper.py
tests/: __init__.py  pubsub.py  test_validation.py  validation.py
