[tool.poetry]
name = "ldrshared"
version = "0.1.0"
description = ""
authors = ["Michael Adams <mikelovesbooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-pubsub = "^2.9.0"
tinydb = "^4.6.1"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
